fixing author spacing

--- a/_sass/author-info.scss
+++ b/_sass/author-info.scss
@@ -57,10 +57,8 @@
     line-height: 36px;
 }
 
-.author-container .author-info-description:before {
-	margin-top: 30px;
-	display: block;
-	clear: both;
+.author-info-image:nth-child(n+1){
+	padding: 40px 20px 20px 20px;
 }
 	
 
